resources/css/oc.css
/* ... */
img.read-post-image {
  width: 16px;
  height: 16px;
  float: left;
}

span.read-post-text {
  float: left;
  margin-left: 8px;
  color: #3FBD7C;
  font-size: 14px;
}

p.digest-bottom-footer-paragraph {
  color: rgba(137, 141, 147, 0.5);
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph, p.digest-footer-paragraph a {
  color: #888D94;
  font-size: 14px;
  font-weight: 400;
}

p.digest-footer-paragraph a {
  font-weight: 400;
  text-decoration: underline;
}

p.invite-carrot-disclaimer {
  color: #34414f;
  font-size: 16px;
  font-weight: 400;
}

p.invite-carrot-disclaimer a {
  color: #34414f;
  font-size: 16px;
  text-decoration: underline;
  font-weight: 400;
}

img.green-button {
  width: 100%;
  font-family: sans-serif;
  color: #ffffff;
  font-size: 20px;
  display: block;
  border: 0px;
}

p.notification-link a {
  font-size: 14px;
  font-weight: bold;
  color: #3FBD7C;
}

span.notification-content, span.notification-content p, span.notification-content div {
  color: #34414F;
}

span.oc-mention {
  font-weight: bold;
}

.note-paragraph.note-paragraph-footer span {
  color: rgba(52, 65, 79, 0.5);
  font-size: 12px;
}

.note-paragraph.note-paragraph-footer a {
  color: rgba(52, 65, 79, 0.5);
  text-decoration: underline;
}


.note-paragraph, .note-paragraph tr, .note-paragraph tr th {
  background-color: #ECECEC !important;
}

.note-paragraph.top-note-paragraph, .note-paragraph.top-note-paragraph tr, .note-paragraph.top-note-paragraph tr th {
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
}

.note-paragraph.bottom-note-paragraph, .note-paragraph.bottom-note-paragraph tr, .note-paragraph.bottom-note-paragraph tr th {
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.note-paragraph p {
  margin-left: 24px;
  margin-right: 24px;
  text-align: left;
}

a.learn-more {
  float: left;
  margin-left: 16px;
  color: #3FBD7C;
  font-size: 14px;
  font-weight: bold;
  margin-top: 10px;
}

.left-align {
  float: left;
}

img.post-avatar {
  width: 32px;
  height: 32px;
  object-fit: contain;
  border-radius: 50%;
  float: left;
}

img.digest-post-avatar {
  width: 40px;
  height: 40px;
  object-fit: contain;
  border-radius: 50%;
  margin-right: 16px;
}

table.digest-post-block td.digest-post-avatar-td {
  width: 56px;
}

p.digest-post-date {
  float: left;
  color: #888D94;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  line-height: 24px;
  margin-left: 4px;
}

p.digest-post-footer {
  color: rgb(52, 65, 79, 0.5);
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  line-height: 18px;
  text-align: left;
}

p.digest-post-footer span.new-comments {
  color: #3fbd7c;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 12px;
  line-height: 18px;
  font-weight: bold;
  margin-left: 4px;
  text-align: left;
}

.token-link {
  color: #3FBD7C;
  font-size: 16px;
  text-align: center;
  cursor: pointer;
  display: block;
}

.green-button:hover {
  color: white;
}

.green-button {
  margin: 0 auto;
  display: inline-block;
  font-size: 14px;
  font-weight: bold;
  color: white;
  width: auto;
  max-width: 210px;
  background-color: #52C489;
  border-radius: 6px;
  text-align: center;
  padding: 11px 16px;
}

.auto-x-margin {
  margin: auto;
}

.center-align {
  text-align: center;
}

a.green-button.integration-settings-button {
  float: none;
  margin: 0 auto;
  max-width: 220px;
  color: white;
}

.view-reminders {
  display: block;
  margin: 0 auto;
  font-size: 16px;
  font-weight: bold;
  color: white !important;
  width: 200px;
  background-color: #3FBD7C;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px;
}

.go-to-posts {
  display: block;
  margin: 0 auto;
  font-size: 16px;
  font-weight: bold;
  color: #FB5E48;
  width: 128px;
  background-color: #FFDFDB;
  border-radius: 6px;
  text-align: center;
  padding: 11px 0px;
}

.go-to-posts:visited, .go-to-posts:hover {
  color: #FB5E48;
}

span.must-see-container {
  background-color: rgba(97, 135, 248, .2);
  padding: 0px 4px;
  margin-left: 8px;
  border-radius: 4px;
  white-space:nowrap;
  line-height: 18px;
  height: 18px;
}

img.must-see-icon {
  width: 8px;
  height: 10px;
  display: inline-block;
}

span.must-see {
  width: 52px;
  margin-left: 4px;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 11px;
  font-weight: bold;
  color: #5789FA;
  vertical-align: middle;
  line-height: 13px;
  height: 13px;
}

table.video-cover-table tr td {
  height: 103px;
}

a.video-cover {
  display: block;
  width: 137px;
  height: 103px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

img.video-play {
  display: block;
  padding-left: 48.5px;
  padding-top: 31px;
  opacity: 0.8;
}

div.video-duration-container {
  padding-right: 8px;
  padding-top: 10px;
  float: right;
}

span.video-duration {
  background-color: rgba(0, 0, 0, 0.4);
  color: white;
  border-radius: 4px;
  font-family: Helvetica, Arial, sans-serif !important;
  font-size: 11px;
  padding: 2px 3px;

}

td.post-block-avatar {
  display: inline-block;
  width: 48px;
  min-height: 32px;
  height: 100%;
  vertical-align: top;
}

td.post-block-avatar-right {
  display: inline-block;
  min-height: 32px;
  width: calc(100% - 52px);
  height: 100%;
  vertical-align: top;
}

td.post-block-right {
  display: inline-block;
  min-height: 32px;
  width: 100%;
  height: 100%;
  vertical-align: top;
}

div.logo-container {
  width: 40px;
  height: 40px;
  padding: 7px;
  background-color: #fff;
  border: 1px solid #ECECEC;
  border-radius: 4px;
  margin: 0 auto;
}

img.logo {
  background-color: #fff;
  width: 40px;
  height: 40px;
  object-fit: contain;
}

.hidden {
  display: none;
}

.reminders-footer {
  background-color: #ECECEC;
}
/* ... */

